--- a/styles/style.css
+++ b/styles/style.css
@@ -1,3 +1,17 @@
-* {
-  color: red;
+body{
+  background:#AAAAAA
+}
+div {
+  width: 300px;
+  height: 200px;
+}
+.blue {
+  background: #3498db;
+}
+.white {
+  background: white;
+  visibility:hidden;
+}
+.red {
+  background: #e74c3c;
 }
